--- a/index.html
+++ b/index.html
@@ -1,1 +1,193 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Eiaw วัดมะม่วง</title>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="container">
+
+<div class="row">
+    <div class="col-lg-6" style=" grid-template-columns: 2fr 6fr 3fr;  display: grid; align-items: center; ">
+        <h3><span class="eiaw">Eiaw</span><span class="eiawgpt">GPT</span></h3>
+        <img src="https://drive.google.com/uc?export=view&id=1U83sC4enpK3aqUdpTqNiovtfmgqxCNyo" class="eiawicon" alt="test">
+    </div>
+    <div class="col-lg-6">
+        <div class="" id="status_message"></div>
+    </div>
+</div>
+<br>
+
+<div class="row">
+<div class="col-lg-10"><input type="text" id="api_key" class="form-control" placeholder="Enter apiKey" /></div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-lg-10"><input type="text" id="chat_box" class="form-control" placeholder="ข้อความ" /></div>
+    <div class="col-lg-2"> <small class="text-"> กด enter ส่งข้อความ <br/> หรือกดปุ่ม </small></div>
+</div>
+
+<div class="row">
+    <div class="col-lg-8 topic">
+        <span><input type="radio" name="topic" value="" checked="checked" /> Nothing  </span>
+        <span><input type="radio" name="topic" value="python" /> Python  </span>
+        <span><input type="radio" name="topic" value="golang" /> Golang </span>
+        <span><input type="radio" name="topic" value="javascript" /> JavaScript </span>
+    </div>
+
+    <div class="col-lg-2">
+        <button class="btn btn-primary" id="send_button">ส่งข้อความ</button>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12" id="chat_response">
+
+
+    </div>
+</div>
+
+<script type="text/javascript">
+    const escapeHtml = (unsafe) => {
+        return unsafe.replaceAll('&', '&amp;').replaceAll('<', '&lt;').replaceAll('>', '&gt;').replaceAll('"', '&quot;').replaceAll("'", '&#039;');
+    }
+
+    function CallChatGPT() {
+        user_message = $("#chat_box").val()
+        api_key = $("#api_key").val()
+        
+        if (api_key.length == 0) {
+            $("#status_message").html("โปรดระบุ API key")
+        }
+
+        topic = $("input[name='topic']:checked").val()
+
+        if (topic.length > 0) {
+            user_message = "I am working on, " + topic + ". Please help me with " + user_message;
+        }
+
+        openai_url = "https://api.openai.com/v1/chat/completions"
+        msgs = [
+            {   "role": "user",
+                "content": user_message
+            }
+        ]
+
+        send_message = {
+            model : "gpt-3.5-turbo",
+            messages: msgs,
+            temperature: 0.60,
+        };
+
+        success_response = function(res){
+            retMsg = res.choices[0].message.content;
+            retMsg = escapeHtml(retMsg)
+            retMsg = retMsg.replaceAll(/```(.*?)\n([\s\S]+)```/g, "<br/><br/>\$1 code:<br/><pre class='code'>\$2</pre><br/>");
+      
+            retMsg = "<br/><br/><img src='https://drive.google.com/uc?export=view&id=1NhFuApvYSu0FNOJ1G0FGxT9sYp08-So0' class='eiawchatimg'>&nbsp;&nbsp;<span class='eiawgpt'>EiawGPT:</span> <br/>" + retMsg + "<br/>";
+            $("#chat_response").append(retMsg);
+            $("#chat_response").scrollTop($("#chat_response")[0].scrollHeight);
+        };
+
+        show_msg = "<br/><br/><span class='eiaw'>You: </span><br/>" + user_message
+
+        $("#chat_response").append(show_msg);
+        $("#chat_response").scrollTop($("#chat_response")[0].scrollHeight);
+
+        $.ajax({
+            type: "POST",
+            url: openai_url,
+            beforeSend: function (xhr) {
+                xhr.setRequestHeader('Authorization', 'Bearer ' + api_key);
+            },
+            data: JSON.stringify(send_message),
+            success: success_response,
+            contentType: 'application/json; charset=utf-8',
+            dataType: "json"
+        });
+    }
+
+    send_request = function(){
+        CallChatGPT()
+        document.getElementById('chat_box').value = ''
+    }
+
+    $("document").ready(function() {
+        $(document).keypress(function(e) {
+            if ((e.keyCode == 10 || e.keyCode == 13)) {
+                send_request();
+            }
+        });
+
+        $(document).keypress(function(e) {    
+            if ((e.code == "Slash") && (e.ctrlKey || e.metaKey)) {
+                $("#chat_box").focus();
+            }
+        });
+
+        $("#send_button").click(function(){
+            send_request();
+        })
+    });
+</script>
+
+<style type="text/css">
+.topic span {
+    width: 200px;
+    padding-right: 15px;
+}
+
+#send_button {
+    float:right;
+    width: 250px;
+}
+
+small {
+    color: #999;
+}
+
+span.eiawgpt {
+    color: rgb(44, 0, 219);
+    font-weight: bold;
+}
+
+span.eiaw {
+    color: rgb(236, 0, 31);
+    font-weight: bold;
+}
+
+pre.code {
+    color: brown;
+}
+
+pre {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+}
+
+div#chat_response {
+    max-height: 750px;
+    overflow-y: scroll;
+}
+.eiawicon{
+    height: 150px; 
+    border-radius: 20px 40px;
+    filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
+}
+
+.eiawchatimg{
+    height: 70px; 
+    border-radius: 50px 50px;
+    filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
+}
+</style>
+
+</div>
+</body>
+</html>
